exports[`test works on toggle 1`] = `
<div
  className="snapguidist__test snapguidist__test--fail snapguidist__test--expanded">
  <div>
    <div>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}>
        Update
      </button>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}>
        <span
          className="snapguidist__arrow snapguidist__arrow--expanded">
          ▼
        </span>
      </button>
    </div>
    <div>
      <div
        className="ReactStyleguidist-common__font snapguidist__label">
        Actual
      </div>
      <code
        className="snapguidist__code">
        actual
      </code>
      <div
        className="ReactStyleguidist-common__font snapguidist__label">
        Expected
      </div>
      <code
        className="snapguidist__code">
        expected
      </code>
    </div>
  </div>
</div>
`;

exports[`test works on update 1`] = `
<div
  className="snapguidist__test snapguidist__test--fail">
  <div>
    <div>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}>
        Update
      </button>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}>
        <span
          className="snapguidist__arrow">
          ▼
        </span>
      </button>
    </div>
    <div>
      <div
        className="ReactStyleguidist-common__font snapguidist__label">
        Actual
      </div>
      <code
        className="snapguidist__code">
        actual
      </code>
      <div
        className="ReactStyleguidist-common__font snapguidist__label">
        Expected
      </div>
      <code
        className="snapguidist__code">
        expected
      </code>
    </div>
  </div>
</div>
`;

exports[`test works when fail 1`] = `
<div
  className="snapguidist__test snapguidist__test--fail">
  <div>
    <div>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}>
        Update
      </button>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}>
        <span
          className="snapguidist__arrow">
          ▼
        </span>
      </button>
    </div>
    <div>
      <div
        className="ReactStyleguidist-common__font snapguidist__label">
        Actual
      </div>
      <code
        className="snapguidist__code">
        actual
      </code>
      <div
        className="ReactStyleguidist-common__font snapguidist__label">
        Expected
      </div>
      <code
        className="snapguidist__code">
        expected
      </code>
    </div>
  </div>
</div>
`;

exports[`test works when is fetching 1`] = `
<div
  className="snapguidist__test snapguidist__test--fail">
  <div>
    <div>
      <button
        className="snapguidist__button"
        disabled={true}
        onClick={[Function]}>
        Update
      </button>
      <button
        className="snapguidist__button"
        disabled={true}
        onClick={[Function]}>
        <span
          className="snapguidist__arrow">
          ▼
        </span>
      </button>
    </div>
    <div>
      <div
        className="ReactStyleguidist-common__font snapguidist__label">
        Actual
      </div>
      <code
        className="snapguidist__code">
        actual
      </code>
      <div
        className="ReactStyleguidist-common__font snapguidist__label">
        Expected
      </div>
      <code
        className="snapguidist__code">
        expected
      </code>
    </div>
  </div>
</div>
`;

exports[`test works when pass 1`] = `
<div
  className="snapguidist__test snapguidist__test--pass" />
`;
